--- a/Python and DS exam notebook.ipynb
+++ b/Python and DS exam notebook.ipynb
@@ -1012,6 +1012,385 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "k=0\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        k=2+2\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0>0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibon(n):\n",
+    "    if n<=1:\n",
+    "        return 3\n",
+    "    else:\n",
+    "        return fibon(n-2) +fibon(n-1)\n",
+    "    \n",
+    "print(fibon(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Level:  0\n",
+      " Sorting:  0 7 [85, 24, 63, 45, 17, 31, 96, 50]\n",
+      " Pivot = 50\n",
+      " Swapped  85 31 [31, 24, 63, 45, 17, 85, 96, 50]\n",
+      " Swapped  63 17 [31, 24, 17, 45, 63, 85, 96, 50]\n",
+      " Final left index 4\n",
+      " Final swap  [31, 24, 17, 45, 50, 85, 96, 63]\n",
+      "    Level:  1\n",
+      "    Sorting:  0 3 [31, 24, 17, 45]\n",
+      "    Pivot = 45\n",
+      "    Final left index 3\n",
+      "    Final swap  [31, 24, 17, 45]\n",
+      "       Level:  2\n",
+      "       Sorting:  0 2 [31, 24, 17]\n",
+      "       Pivot = 17\n",
+      "       Final left index 0\n",
+      "       Final swap  [17, 24, 31]\n",
+      "          Level:  3\n",
+      "          Sorting:  1 2 [24, 31]\n",
+      "          Pivot = 31\n",
+      "          Final left index 2\n",
+      "          Final swap  [24, 31]\n",
+      "    Level:  1\n",
+      "    Sorting:  5 7 [85, 96, 63]\n",
+      "    Pivot = 63\n",
+      "    Final left index 5\n",
+      "    Final swap  [63, 96, 85]\n",
+      "       Level:  2\n",
+      "       Sorting:  6 7 [96, 85]\n",
+      "       Pivot = 85\n",
+      "       Final left index 6\n",
+      "       Final swap  [85, 96]\n",
+      "[17, 24, 31, 45, 50, 63, 85, 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inplace_quick_sort(S, a, b, level):\n",
+    "  \"\"\"Sort the list from S[a] to S[b] inclusive using the quick-sort algorithm.\"\"\"\n",
+    "  if a >= b: return                                      # range is trivially sorted\n",
+    "  \n",
+    "  print(\"   \"*level,\"Level: \", level)\n",
+    "  print(\"   \"*level,\"Sorting: \", a, b, S[a:b+1])\n",
+    "  pivot = S[b]                                           # last element of range is pivot\n",
+    "  print(\"   \"*level,\"Pivot =\", pivot)\n",
+    "  left = a                                               # will scan rightward\n",
+    "  right = b-1                                            # will scan leftward\n",
+    "  while left <= right:\n",
+    "    # scan until reaching value equal or larger than pivot (or right marker)\n",
+    "    while left <= right and S[left] < pivot:\n",
+    "      left += 1\n",
+    "    # scan until reaching value equal or smaller than pivot (or left marker)\n",
+    "    while left <= right and pivot < S[right]:\n",
+    "      right -= 1\n",
+    "    if left <= right:                                    # scans did not strictly cross\n",
+    "      S[left], S[right] = S[right], S[left]              # swap values\n",
+    "      print(\"   \"*level,\"Swapped \", S[right], S[left], S)\n",
+    "      left, right = left + 1, right - 1                  # shrink range\n",
+    "\n",
+    "  # put pivot into its final place (currently marked by left index)\n",
+    "  print(\"   \"*level,\"Final left index\", left) \n",
+    "  S[left], S[b] = S[b], S[left]\n",
+    "  print(\"   \"*level,\"Final swap \", S[a:b+1])\n",
+    "  # make recursive calls\n",
+    "  inplace_quick_sort(S, a, left - 1, level+1)\n",
+    "  inplace_quick_sort(S, left + 1, b, level+1)\n",
+    "  \n",
+    "S = [85, 24, 63, 45, 17, 31, 96, 50]\n",
+    "\n",
+    "inplace_quick_sort(S, 0, len(S)-1, 0)\n",
+    "\n",
+    "print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 24, 31, 45, 50, 63, 85, 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge(S1, S2, S):\n",
+    "  \"\"\"Merge two sorted Python lists S1 and S2 into properly sized list S.\"\"\"\n",
+    "  i = j = 0\n",
+    "  while i + j < len(S):\n",
+    "    if j == len(S2) or (i < len(S1) and S1[i] < S2[j]):\n",
+    "      S[i+j] = S1[i]      # copy ith element of S1 as next item of S\n",
+    "      i += 1\n",
+    "    else:\n",
+    "      S[i+j] = S2[j]      # copy jth element of S2 as next item of S\n",
+    "      j += 1\n",
+    "\n",
+    "def merge_sort(S):\n",
+    "  \"\"\"Sort the elements of Python list S using the merge-sort algorithm.\"\"\"\n",
+    "  n = len(S)\n",
+    "  if n < 2:\n",
+    "    return                # list is already sorted\n",
+    "  # divide\n",
+    "  mid = n // 2\n",
+    "  S1 = S[0:mid]           # copy of first half\n",
+    "  S2 = S[mid:n]           # copy of second half\n",
+    "  # conquer (with recursion)\n",
+    "  merge_sort(S1)          # sort copy of first half\n",
+    "  merge_sort(S2)          # sort copy of second half\n",
+    "  # merge results\n",
+    "  merge(S1, S2, S)        # merge sorted halves back into S\n",
+    "    \n",
+    "S=[85,24,63,45,17,31,96,50]\n",
+    "merge_sort(S)\n",
+    "print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input :  [64, 34, 25, 12, 22, 11, 90]\n",
+      "Pass iter: 0\n",
+      "Swap.. :  64 34 [34, 64, 25, 12, 22, 11, 90]\n",
+      "Swap.. :  64 25 [34, 25, 64, 12, 22, 11, 90]\n",
+      "Swap.. :  64 12 [34, 25, 12, 64, 22, 11, 90]\n",
+      "Swap.. :  64 22 [34, 25, 12, 22, 64, 11, 90]\n",
+      "Swap.. :  64 11 [34, 25, 12, 22, 11, 64, 90]\n",
+      "Pass iter: 1\n",
+      "Swap.. :  34 25 [25, 34, 12, 22, 11, 64, 90]\n",
+      "Swap.. :  34 12 [25, 12, 34, 22, 11, 64, 90]\n",
+      "Swap.. :  34 22 [25, 12, 22, 34, 11, 64, 90]\n",
+      "Swap.. :  34 11 [25, 12, 22, 11, 34, 64, 90]\n",
+      "Pass iter: 2\n",
+      "Swap.. :  25 12 [12, 25, 22, 11, 34, 64, 90]\n",
+      "Swap.. :  25 22 [12, 22, 25, 11, 34, 64, 90]\n",
+      "Swap.. :  25 11 [12, 22, 11, 25, 34, 64, 90]\n",
+      "Pass iter: 3\n",
+      "Swap.. :  22 11 [12, 11, 22, 25, 34, 64, 90]\n",
+      "Pass iter: 4\n",
+      "Swap.. :  12 11 [11, 12, 22, 25, 34, 64, 90]\n",
+      "Pass iter: 5\n",
+      "Pass iter: 6\n",
+      "Output:  [11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    # Traverse through all array elements\n",
+    "    swapFlag = False\n",
+    "    for i in range(n):\n",
+    "        print(\"Pass iter:\", i)\n",
+    "        # Last i elements are already in place\n",
+    "        for j in range(0, n-i-1):\n",
+    "\n",
+    "            # traverse the array from 0 to n-i-1\n",
+    "            # Swap if the element found is greater\n",
+    "            # than the next element\n",
+    "\n",
+    "            if (arr[j] > arr[j+1]): # check for the wrong order\n",
+    "                    arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "                    swapFlag = True\n",
+    "                    print (\"Swap.. : \", arr[j+1], arr[j], arr)\n",
+    "\n",
+    "        if (swapFlag == False):\n",
+    "            break\n",
+    "\n",
+    "arr = [64,34,25,12,22,11,90]\n",
+    "\n",
+    "print (\"Input : \", arr)\n",
+    "\n",
+    "bubble_sort(arr)\n",
+    "\n",
+    "print(\"Output: \", arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr=[64,25,12,22,11]\n",
+    "def selection_sort(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "\n",
+    "        # Find the minimum element in remaining\n",
+    "        # unsorted array\n",
+    "        min_idx = i\n",
+    "        for j in range(i + 1, len(arr)):\n",
+    "            if arr[min_idx] > arr[j]:\n",
+    "                min_idx = j\n",
+    "\n",
+    "            # Swap the found minimum element with\n",
+    "        # the first element\n",
+    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "        print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "m\n",
+      "a\n",
+      "n\n",
+      " \n",
+      "b\n",
+      "a\n",
+      "i\n",
+      "g\n",
+      " \n",
+      "i\n",
+      "s\n",
+      " \n",
+      "g\n",
+      "o\n",
+      "o\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"noman baig is good\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "m={'a':1,'b':2,'d':3,'c':3}\n",
+    "print(m['d'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
